# MAI_OOP_labs

./: README.md
laba_1/: .gitignore  CMakeLists.txt  Makefile  Report.md  TESTS.cpp  lab_click  main.cpp  test_executable
laba_1/ext/: func.cpp
laba_1/include/: laba_1.h
laba_1/tests/: TESTS.cpp
